Changed survey questions to combo - easier to spot no response

--- a/topics/01-Logic/21-Practical_01_-_Logic_1_-_Truth_Tables/files/Practical_01_-_Logic_1_-_Truth_Tables.ipynb
+++ b/topics/01-Logic/21-Practical_01_-_Logic_1_-_Truth_Tables/files/Practical_01_-_Logic_1_-_Truth_Tables.ipynb
@@ -665,9 +665,11 @@
     "\n",
     "#@markdown **This week's material**\n",
     "\n",
-    "#@markdown How difficult did you find each of the following this week _(0=too easy 3=easy, 5=just right, 7=a bit difficult, 10=impossible)_?\n",
-    "lecture_difficulty = 0  #@param {type: \"slider\", min: 0, max: 10}\n",
-    "tutorial_questions_difficulty = 0  #@param {type: \"slider\", min: 0, max: 10}\n",
+    "#@markdown How difficult did you find each of the following this week?\n",
+    "lecture_difficulty = 'No opinion' #@param ['No opinion', \"Too easy', 'Easy', 'About right', 'Some bits were hard but overall it was doable', 'Too difficult', 'Impossible']\n",
+    "\n",
+    "tutorial_questions_difficulty = 'No opinion' #@param ['No opinion', \"Too easy', 'Easy', 'About right', 'Some bits were hard but overall it was doable', 'Too difficult', 'Impossible']\n",
+    "\n",
     "\n",
     "#@markdown Use the line below to enter any comments &mdash; what you liked, what you did not like. Again all feedback is welcome.\n",
     "general_comment = \"\" #@param {type: \"string\"}\n"
