--- a/topics/01-Logic/22-Practical_02_-_Logic_2_-_Applications/files/Practical_02_-_Logic_2_-_Applications.ipynb
+++ b/topics/01-Logic/22-Practical_02_-_Logic_2_-_Applications/files/Practical_02_-_Logic_2_-_Applications.ipynb
@@ -2,41 +2,46 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# Practical 02 - Logic 2 (Applications)"
-   ],
    "metadata": {
     "id": "vD3AmQ02Bsws"
-   }
+   },
+   "source": [
+    "# Practical 02 - Logic 2 (Applications)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Setup"
-   ],
    "metadata": {
     "id": "-q2NeE0cBswt",
     "tags": []
-   }
+   },
+   "source": [
+    "## Setup"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "#@markdown **Please enter your following details and press Shift-Enter to save:**\n",
-    "your_student_number = '' #@param {type: \"string\"}\n",
-    "your_name = '' #@param {type: \"string\"}"
-   ],
-   "outputs": [],
    "metadata": {
     "cellView": "form",
     "id": "6dry5b2lBswv",
     "label": "bio"
-   }
+   },
+   "outputs": [],
+   "source": [
+    "#@markdown **Please enter your following details and press Shift-Enter to save:**\n",
+    "your_student_number = '' #@param {type: \"string\"}\n",
+    "your_name = '' #@param {type: \"string\"}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "7KLonCoKBsw2",
+    "label": "setup"
+   },
+   "outputs": [],
    "source": [
     "# setup magic, do not edit this cell! Just press Shift+Enter or click on arrow at top-left\n",
     "\n",
@@ -44,15 +49,13 @@
     "content = urllib.request.urlretrieve (\"http://discretemathematics-202122.github.io/live/resources/setup_practical_magic.py\")\n",
     "exec(open(content[0]).read())\n",
     "setup_practical(locals())"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "7KLonCoKBsw2",
-    "label": "setup"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "ND3VWRuQBsw8"
+   },
    "source": [
     "---\n",
     "## Introduction\n",
@@ -61,13 +64,13 @@
     " \n",
     "  * Logic circuits \n",
     "  * Determining conditions under which different code branches are executed."
-   ],
-   "metadata": {
-    "id": "ND3VWRuQBsw8"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "XJ92XUwIBsw9"
+   },
    "source": [
     "### Mathematics Concepts\n",
     "\n",
@@ -79,13 +82,13 @@
     " \n",
     "\n",
     " "
-   ],
-   "metadata": {
-    "id": "XJ92XUwIBsw9"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "ClZgXo95CRCf"
+   },
    "source": [
     "### Python Concepts\n",
     "\n",
@@ -93,13 +96,13 @@
     " * Command `TruthTable` to build a truth table of an expression.\n",
     " * Conditional control statements using `if`.\n",
     " ---"
-   ],
-   "metadata": {
-    "id": "ClZgXo95CRCf"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "TqURauB-Bsw9"
+   },
    "source": [
     "## Logic Circuits\n",
     "\n",
@@ -138,33 +141,33 @@
     "> Or if you used option `ints=True` in the `TruthTable` command you got the same table with `False` replcaed by `0` and `True` replaced by `1`.\n",
     "\n",
     "And from this truth table we can determine the inputs (if any) for which the output is on or off."
-   ],
-   "metadata": {
-    "id": "TqURauB-Bsw9"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "TruthTable(\"A or B\", ints=True)"
-   ],
-   "outputs": [],
    "metadata": {
     "id": "dc4q4NNwCm4S"
-   }
+   },
+   "outputs": [],
+   "source": [
+    "TruthTable(\"A or B\", ints=True)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Exercises"
-   ],
    "metadata": {
     "id": "yfYAWwcWBsw-"
-   }
+   },
+   "source": [
+    "## Exercises"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "9AG5uBnfBsw_"
+   },
    "source": [
     "### Question 1\n",
     "\n",
@@ -173,41 +176,41 @@
     "**a)** Using the generated truth table or otherwise, is there an input (`False`/`True` values for \\\\(x\\\\) and \\\\(y\\\\)) for which the output is `True` (i.e. 1 or on)? \n",
     " \n",
     "![](https://kmurphy.github.io/notebooks/circ-xor.png)"
-   ],
-   "metadata": {
-    "id": "9AG5uBnfBsw_"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "# Question 1 (a)\n",
-    "# Call function TruthTable with expression representing above circuit \n"
-   ],
-   "outputs": [],
    "metadata": {
     "id": "rxvnu-R2Bsw_",
     "label": "Q1a"
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Question 1 (a)\n",
+    "# Call function TruthTable with expression representing above circuit \n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "JIB2hWAOBsxC",
+    "label": "Q1b"
+   },
+   "outputs": [],
    "source": [
     "# Question 1 (b) \n",
     "# Replace \"None\" by False/True or 0/1 if you have found a solution\n",
     "x = None\n",
     "y = None"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "JIB2hWAOBsxC",
-    "label": "Q1b"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "T0ugEp4mBsxF"
+   },
    "source": [
     "### Question 2\n",
     "\n",
@@ -216,42 +219,42 @@
     "**a)** Using the generated truth table or otherwise, is there an input (`False`/`True` values for \\\\(x\\\\), \\\\(y\\\\), and \\\\(z\\\\)) for which the output is `True` (i.e. 1 or on)? \n",
     " \n",
     " ![](https://kmurphy.github.io/notebooks/circ-simp.png)"
-   ],
-   "metadata": {
-    "id": "T0ugEp4mBsxF"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "# Question 2 (a)\n",
-    "# Run function TruthTable with expression representing above circuit \n"
-   ],
-   "outputs": [],
    "metadata": {
     "id": "Lw2CtnfXBsxF",
     "label": "Q2a"
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Question 2 (a)\n",
+    "# Run function TruthTable with expression representing above circuit \n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "4g84JL1XBsxH",
+    "label": "Q2b"
+   },
+   "outputs": [],
    "source": [
     "# Question 2 (b) \n",
     "# Replace \"None\" by False/True or 0/1 if you have found an input set for which the output is True.\n",
     "x = None\n",
     "y = None\n",
     "z = None"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "4g84JL1XBsxH",
-    "label": "Q2b"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "grpJY1IcBsxJ"
+   },
    "source": [
     "### Question 3\n",
     "\n",
@@ -260,42 +263,42 @@
     "**a)** Using the generated truth table or otherwise, is there an input (`False`/`True` values for \\\\(A\\\\), \\\\(B\\\\), and \\\\(C\\\\)) for which the output is `True` (i.e. 1 or on)? \n",
     " \n",
     " ![](https://kmurphy.github.io/notebooks/logic_q3.png)"
-   ],
-   "metadata": {
-    "id": "grpJY1IcBsxJ"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "# Question 3 (a)\n",
-    "# Run function TruthTable with expression representing above circuit \n"
-   ],
-   "outputs": [],
    "metadata": {
     "id": "wt3d8Jz0BsxJ",
     "label": "Q3a"
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Question 3 (a)\n",
+    "# Run function TruthTable with expression representing above circuit \n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "ZQOeEU4GBsxL",
+    "label": "Q3b"
+   },
+   "outputs": [],
    "source": [
     "# Question 3 (b) \n",
     "# Replace \"None\" by False/True or 0/1 if you have found a solution\n",
     "A = None\n",
     "B = None\n",
     "C = None"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "ZQOeEU4GBsxL",
-    "label": "Q3b"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "SE6Av5EvBsxO"
+   },
    "source": [
     "## Conditional Control Statements\n",
     "\n",
@@ -316,13 +319,13 @@
     " * Don't confuse the `if` statement with the logical `IfThen` \\\\((\\to\\\\)) operator.\n",
     "\n",
     " * **The colon and the indentation is critical in python** to specify a block of code statements, other languages such as java/processing use braces \"{}\"."
-   ],
-   "metadata": {
-    "id": "SE6Av5EvBsxO"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "m7pUXmSuOnwQ"
+   },
    "source": [
     "## IMPORTANT - Indenting in Python\n",
     "**The colon and the indentation is critical in python** to specify a block of code statements, other languages such as java/processing use braces \"{}\", others use `begin`/`end`.  The use of indenting instead of braces to indicate structure is a **big deal** and forces, you the programmer, to always type (with correct spacing to the left) your code correctly before executing it.  If your code is not aligned correctly you will get a indentation error like the following:\n",
@@ -332,13 +335,13 @@
     "To better understand why python uses indenting, read the following comment from [Guido van Rossum](https://gvanrossum.github.io) the inventer of python or google \"Why does python using indenting?\"\n",
     "\n",
     "> In order to separate blocks of code (like for loops, if blocks and function definitions) the compiler / interpreter needs something to tell it when a block ends. Curly braces and end statements are perfectly valid ways of providing this information for the compiler. For a human to be able to read the code indentation is a much better way of providing the visual cues about block structure. As indentation also contains all the information for the compiler, to use both would be redundant. As indentation is better for humans, it makes sense to use that for the compiler too. It has the advantage that Python programs tend to be uniformly and consistently indented, removing one hurdle to understanding other people's code. Python does not mandate how you indent (two spaces or four, tabs or spaces - but not both), just that you do it consistently. Those that get used to the Python way of doing things tend to start seeing curly braces as unnecessary line noise that clutters code. On the other hand, 'the whitespace thing' is possibly the single biggest reason why some developers refuse to even try Python."
-   ],
-   "metadata": {
-    "id": "m7pUXmSuOnwQ"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "ad4o0F6KBsxO"
+   },
    "source": [
     "**Example**\n",
     "\n",
@@ -350,14 +353,15 @@
     "\n",
     "> Side Note: In Jul 2020, a programmer [Kat Maddox](https://twitter.com/ctrlshifti) tweeted (in jest) the following \n",
     "tweet <blockquote class=\"twitter-tweet\"><p lang=\"en\" dir=\"ltr\">God I wish there was an easier way to do this <a href=\"https://t.co/8UrBNKdTRW\">pic.twitter.com/8UrBNKdTRW</a></p>&mdash; Kat Maddox (@ctrlshifti) <a href=\"https://twitter.com/ctrlshifti/status/1288745146759000064?ref_src=twsrc%5Etfw\">July 30, 2020</a></blockquote> <script async src=\"https://platform.twitter.com/widgets.js\" charset=\"utf-8\"></script> Kay is well worth following, but at least have a look at the subsequent thread. "
-   ],
-   "metadata": {
-    "id": "ad4o0F6KBsxO"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "FKIGRmyXBsxP"
+   },
+   "outputs": [],
    "source": [
     "n = 4\n",
     "\n",
@@ -365,23 +369,22 @@
     "    print (n, \"is an even integer\")\n",
     "else:\n",
     "    print (n, \"is an odd integer\")"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "FKIGRmyXBsxP"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Exercises"
-   ],
    "metadata": {
     "id": "tSjla4f6BsxR"
-   }
+   },
+   "source": [
+    "## Exercises"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "V3it8WQ4BsxR"
+   },
    "source": [
     "### Question 4\n",
     "\n",
@@ -404,14 +407,16 @@
     "$$\n",
     "\n",
     "Determine values for `c`, `p`, `m` and `h` in the following code to ensure that the given logical condition in the `if` statement is `True`.  (In orter words, determine any input that results in outputting the message `\"Hey we can have a maths lecture!\"`.\n"
-   ],
-   "metadata": {
-    "id": "V3it8WQ4BsxR"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "l9LcvSH9BsxS",
+    "label": "Q4"
+   },
+   "outputs": [],
    "source": [
     "# Question 4\n",
     "\n",
@@ -427,52 +432,52 @@
     "    print (\"Hey we can have a maths lecture!\")\n",
     "else:\n",
     "    print (\"His writing is terrible, lets go for coffee instead\")"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "l9LcvSH9BsxS",
-    "label": "Q4"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "M_JObdPwBsxU"
+   },
    "source": [
     "### Question 5\n",
     "\n",
     "Construct a truth table for the condition in the previous example. "
-   ],
-   "metadata": {
-    "id": "M_JObdPwBsxU"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "# Question 5\n"
-   ],
-   "outputs": [],
    "metadata": {
     "id": "cVx3ZtNVBsxU",
     "label": "Q5"
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Question 5\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "W8JY_hYiBsxW"
+   },
    "source": [
     "### Question 6\n",
     "\n",
     "Determine values for `p`, `q`, and `r` for which the condition in the `if` statement is `True`?\n",
     "\n",
     "Hint: Use a Truth Table"
-   ],
-   "metadata": {
-    "id": "W8JY_hYiBsxW"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "OSqNioNRBsxW",
+    "label": "Q6"
+   },
+   "outputs": [],
    "source": [
     "# Question 6\n",
     "\n",
@@ -486,53 +491,53 @@
     "    print (\"Condition is True\")\n",
     "else:\n",
     "    print (\"No, condition is False\")"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "OSqNioNRBsxW",
-    "label": "Q6"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "id": "8PtdWETnRbbx"
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "id": "d4zmLsTLBsxX"
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "id": "RVzRwXbnRc79"
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "gWSzVWKJRcp_"
+   },
    "source": [
     "---\n",
     "## Review/Feedback (P02)\n"
-   ],
-   "metadata": {
-    "id": "gWSzVWKJRcp_"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "cellView": "form",
+    "id": "hEqPUXxZRenE"
+   },
+   "outputs": [],
    "source": [
     "#@markdown This a a short questionnaire for you to provide feedback on how you think the semester is progressing and in particular for __Discrete Mathematics__, how easy/difficult, interesting/boring, useful/confusing you find the material. By completing the following you will help us improve our delivery.<br />Please enter your feedback and click on arrow at top-left to save. \n",
     "\n",
@@ -546,27 +551,23 @@
     "\n",
     "#@markdown **This week's material**\n",
     "\n",
-    "#@markdown How difficult did you find each of the following this week _(0=too easy 3=easy, 5=just right, 7=a bit difficult, 10=impossible)_?\n",
-    "lecture_difficulty = 0  #@param {type: \"slider\", min: 0, max: 10}\n",
-    "tutorial_questions_difficulty = 0  #@param {type: \"slider\", min: 0, max: 10}\n",
+    "#@markdown How difficult did you find each of the following this week?\n",
+    "lecture_difficulty = 'No opinion' #@param ['No opinion', \"Too easy', 'Easy', 'About right', 'Some bits were hard but overall it was doable', 'Too difficult', 'Impossible']\n",
+    "\n",
+    "tutorial_questions_difficulty = 'No opinion' #@param ['No opinion', \"Too easy', 'Easy', 'About right', 'Some bits were hard but overall it was doable', 'Too difficult', 'Impossible']\n",
     "\n",
     "#@markdown Use the line below to enter any comments &mdash; what you liked, what you did not like. Again all feedback is welcome.\n",
     "general_comment = \"\" #@param {type: \"string\"}\n"
-   ],
-   "outputs": [],
-   "metadata": {
-    "cellView": "form",
-    "id": "hEqPUXxZRenE"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "id": "6LeF7s2DRgMT"
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -579,8 +580,9 @@
    "hash": "ef8c922cda7b80eb8a1be821b38f862932cca369d712024223d5460c44797b0f"
   },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.5 64-bit ('default': pyenv)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
