--- a/topics/02-Methods_of_Mathematical_Proof/21-Practical_03_-_Mathematical_Proofs/files/Practical_03_-_Mathematical_Proofs.ipynb
+++ b/topics/02-Methods_of_Mathematical_Proof/21-Practical_03_-_Mathematical_Proofs/files/Practical_03_-_Mathematical_Proofs.ipynb
@@ -7,7 +7,7 @@
         "label": "title"
       },
       "source": [
-        "# Practical 03 - Mathematical Proofs"
+        "# DM_P03 - Mathematical Proofs"
       ]
     },
     {
@@ -38,15 +38,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "uRAHyJ00wh2r"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "PMOHc55Ft4xa"
       },
       "outputs": [],
@@ -54,7 +45,7 @@
         "# setup magic, do not edit this cell! Just press Shift+Enter or click on arrow at top-left\n",
         "\n",
         "import urllib.request\n",
-        "content = urllib.request.urlretrieve (\"https://kmurphy.bitbucket.io/modules/Discrete_Mathematics/resources/setup_practical_magic.py\")\n",
+        "content = urllib.request.urlretrieve (\"http://discretemathematics-202122.github.io/live/resources/setup_practical_magic.py\")\n",
         "exec(open(content[0]).read())\n",
         "setup_practical(locals())"
       ]
@@ -154,8 +145,7 @@
         "\n",
         "In other words:\n",
         "\n",
-        " * Build circuit with two inputs, `a` and `b`.\n",
-        " * such that the output is __on__ (`1`/`True`) only when at least two inputs is __on__ (`1`/`True`).\n",
+        " * Build circuit with two inputs, `a` and `b`, such that the output is __on__ (`1`/`True`) only when at least two inputs is __on__ (`1`/`True`).\n",
         " * Verify circuit using a truth table. \n",
         "     In other words check that in every row in which at least two inputs are `True` then and only then the output is `True`."
       ]
@@ -169,8 +159,8 @@
       },
       "outputs": [],
       "source": [
-        "# Quesiton 1\n",
-        "# store proposition representing circuit in string p\n",
+        "# Question 1\n",
+        "# store proposition representing your designed circuit in string p\n",
         "\n",
         "p = \"\" \n",
         "TruthTable(p, ints=True)"
@@ -184,7 +174,7 @@
       "source": [
         "### Question 2\n",
         "\n",
-        "If $n=2$ design the circuit using `or` ($\\lor$) and `not` ($\\lnot$) gates only."
+        "If $n=2$ design the required circuit using `or` ($\\lor$) and `not` ($\\lnot$) gates only."
       ]
     },
     {
@@ -197,10 +187,10 @@
       "outputs": [],
       "source": [
         "# Question 2\n",
-        "# store proposition representing circuit in string p\n",
+        "# store proposition representing your designed circuit in string p\n",
         "\n",
         "p = \"\"\n",
-        "TruthTable(p)"
+        "TruthTable(p, ints=True)"
       ]
     },
     {
@@ -211,7 +201,9 @@
       "source": [
         "### Question 3\n",
         "\n",
-        "If $n=3$ design the circuit using `and` ($\\land$) gates only."
+        "If $n=3$ design the circuit using `and` ($\\land$), `or` ($\\lor$) and (possibly) `not` ($\\lnot$) gates. \n",
+        "\n",
+        "**But** assume `and` ($\\land$) gates are more expensive than `or` ($\\lor$) gates so want to use fewer `and` ($\\land$) gates than `or` ($\\lor$) gates. "
       ]
     },
     {
@@ -224,10 +216,39 @@
       "outputs": [],
       "source": [
         "# Question 3\n",
-        "# store proposition representing circuit in string p\n",
+        "# store proposition representing your designed circuit in string p\n",
         "\n",
         "p = \"\"\n",
-        "TruthTable(p)"
+        "TruthTable(p, ints=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q0RcGKjdtpjN"
+      },
+      "source": [
+        "### Question 4\n",
+        "\n",
+        "If $n=3$ design the circuit using `and` ($\\land$), `or` ($\\lor$) and (possibly) `not` ($\\lnot$) gates. \n",
+        "\n",
+        "**But** assume `and` ($\\land$) gates are less expensive than `or` ($\\lor$) gates so want to use fewer `or` ($\\lor$) gates than `and` ($\\land$) gates. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bLjFj4e8tpjN",
+        "label": "Q3"
+      },
+      "outputs": [],
+      "source": [
+        "# Question 4\n",
+        "# store proposition representing your designed circuit in string p\n",
+        "\n",
+        "p = \"\"\n",
+        "TruthTable(p, ints=True)"
       ]
     },
     {
@@ -236,7 +257,7 @@
         "id": "-aYP_YGNtpjR"
       },
       "source": [
-        "### Question 4\n",
+        "### Question 5\n",
         "\n",
         "If $n=4$ design the circuit using fewest number of gates."
       ]
@@ -250,35 +271,11 @@
       },
       "outputs": [],
       "source": [
-        "# Question 4\n",
-        "# store proposition representing circuit in string p\n",
+        "# Question 5\n",
+        "# store proposition representing required circuit in string p\n",
         "\n",
         "p = \"\"\n",
-        "TruthTable(p)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fhVhFzjqtpjU"
-      },
-      "source": [
-        "### Question 5\n",
-        "\n",
-        "If $n=8$ estimate the number of gates need based on your design for the $n=4$ case.  You don't have to build the circuit, but please feel free to do so if you wish."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "sny0SSOrtpjU",
-        "label": "Q4"
-      },
-      "outputs": [],
-      "source": [
-        "# Question 5\n",
-        "gates = 0"
+        "TruthTable(p, ints=True)"
       ]
     },
     {
@@ -477,7 +474,7 @@
       },
       "source": [
         "---\n",
-        "## Review/Feedback (P04)"
+        "## Review/Feedback (P03)"
       ]
     },
     {
@@ -489,7 +486,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown One of disadvantage of going online is that students can lose out on opportunities to provide feedback on how they think the semester is progressing and in particular for __Discrete Mathematics__, how they easy/difficult, interesting/boring, useful/confusing they find the material. By completing the following you will help us improve our delivery.<br />Please enter your feedback and click on arrow at top-left to save. \n",
+        "#@markdown This a a short questionnaire for you to provide feedback on how you think the semester is progressing and in particular for __Discrete Mathematics__, how easy/difficult, interesting/boring, useful/confusing you find the material. By completing the following you will help us improve our delivery.<br />Please enter your feedback and click on arrow at top-left to save. \n",
         "\n",
         "#@markdown **This practical**\n",
         "\n",
@@ -501,9 +498,10 @@
         "\n",
         "#@markdown **This week's material**\n",
         "\n",
-        "#@markdown How difficult did you find each of the following this week _(0=too easy 3=easy, 5=just right, 7=a bit difficult, 10=impossible)_?\n",
-        "lecture_difficulty = 0  #@param {type: \"slider\", min: 0, max: 10}\n",
-        "tutorial_questions_difficulty = 0  #@param {type: \"slider\", min: 0, max: 10}\n",
+        "#@markdown How difficult did you find each of the following this week?\n",
+        "lecture_difficulty = 'No opinion' #@param ['No opinion', \"Too easy', 'Easy', 'About right', 'Some bits were hard but overall it was doable', 'Too difficult', 'Impossible']\n",
+        "\n",
+        "tutorial_questions_difficulty = 'No opinion' #@param ['No opinion', \"Too easy', 'Easy', 'About right', 'Some bits were hard but overall it was doable', 'Too difficult', 'Impossible']\n",
         "\n",
         "#@markdown Use the line below to enter any comments &mdash; what you liked, what you did not like. Again all feedback is welcome.\n",
         "general_comment = \"\" #@param {type: \"string\"}"
@@ -526,9 +524,11 @@
       "provenance": [],
       "toc_visible": true
     },
+    "interpreter": {
+      "hash": "50fe4654f829c95de66cc72555da8178678d6be29b1cd332bf0108afa04e97dd"
+    },
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
+      "display_name": "Python 3.9.5 64-bit ('default': pyenv)",
       "name": "python3"
     },
     "language_info": {
@@ -541,7 +541,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.7"
+      "version": "3.9.5"
     },
     "toc": {
       "toc_cell": false,
