--- a/topics/03-Sets/21-Practical_04_-_Sets/files/Practical_04_-_Sets.ipynb
+++ b/topics/03-Sets/21-Practical_04_-_Sets/files/Practical_04_-_Sets.ipynb
@@ -204,7 +204,7 @@
    },
    "outputs": [],
    "source": [
-    "# Quesiton 1\n"
+    "# Question 1\n"
    ]
   },
   {
@@ -230,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "# Quesiton 2\n"
+    "# Question 2\n"
    ]
   },
   {
@@ -284,7 +284,7 @@
    },
    "outputs": [],
    "source": [
-    "# Quesiton 3\n"
+    "# Question 3\n"
    ]
   },
   {
@@ -307,7 +307,7 @@
    },
    "outputs": [],
    "source": [
-    "# Quesiton 4\n"
+    "# Question 4\n"
    ]
   },
   {
@@ -379,7 +379,7 @@
    },
    "outputs": [],
    "source": [
-    "# Quesiton 5\n"
+    "# Question 5\n"
    ]
   },
   {
@@ -402,7 +402,7 @@
    },
    "outputs": [],
    "source": [
-    "# Quesiton 6\n",
+    "# Question 6\n",
     "\n"
    ]
   },
@@ -414,7 +414,7 @@
    "source": [
     "### Question 7\n",
     "\n",
-    "Write code to generate and display the set, `HAlso o`, a set of positive integers less than 1000 that are multiples of 3 or multiples of 5. Also output the number of elements in the set.\n",
+    "Write code to generate and display the set, `H`, a set of positive integers less than 1000 that are multiples of 3 or multiples of 5. Also output the number of elements in the set.\n",
     "\n",
     "Hint: Use a filter (as shown above)"
    ]
@@ -428,7 +428,7 @@
    },
    "outputs": [],
    "source": [
-    "# Quesiton 7\n"
+    "# Question 7\n"
    ]
   },
   {
