--- a/topics/03-Sets/22-Practical_05_-_Set_Operations/files/Practical_05_-_Set_Operations.ipynb
+++ b/topics/03-Sets/22-Practical_05_-_Set_Operations/files/Practical_05_-_Set_Operations.ipynb
@@ -22,7 +22,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "label": "bio"
+	   "cellView": "form",
+    	"label": "bio"
    },
    "outputs": [],
    "source": [
@@ -171,7 +172,7 @@
     "Write code to:\n",
     "\n",
     " * Create set $A$ containg natural numbers up to but not including 20.\n",
-    " * Output the set $B$ with a label using `print`.\n",
+    " * Output the set $A$ with a label using `print`.\n",
     " * Create set $B$ containg even natural numbers up to but not including 10.\n",
     " * Output the set $B$ with a label using `print`.\n",
     " * Define set $C=A\\setminus B$.\n",
@@ -276,7 +277,7 @@
     " 1. Create set $A$ containing integers, greater than 1, up to but not including 100.\n",
     " 1. Output the set $A$ with a label using `print`.\n",
     " 1. Create set $B$ containing positive integers up to but not including 100 that are multiples of 2.\n",
-    " 1. Output the set $A$ with a label using `print`.\n",
+    " 1. Output the set $B$ with a label using `print`.\n",
     " 1. Remove this from set $A$, and save the result back in to $A$.\n",
     " 1. Repeat for steps 3&ndash;5 with multiples of 3, multiples of 5, etc.\n",
     " \n",
@@ -319,7 +320,7 @@
     " * Create set $B$ containing positive integers up to but not including 17.\n",
     " * Output the set $B$ with a label using `print`.\n",
     " * Create a relation $R$ from $A$ to $B$ where $ (a,b)\\in R$ iff $a^2=b$.\n",
-    " * Output the set $B$ with a label using `print`.\n",
+    " * Output the set $R$ with a label using `print`.\n",
     "\n",
     "Finally draw a diagram representing the relation using \n",
     "\n",
@@ -355,7 +356,7 @@
     " * Create set $B$ containing digits 0 to 9 inclusive.\n",
     " * Output the set $B$ with a label using `print`.\n",
     " * Create a relation $R$ from $A$ to $B$ where $ (a,b)\\in R$ iff number of letters in $a$ is the same as the number of letters in $b$ when writing digits in English.\n",
-    " * Output the set $B$ with a label using `print`.\n",
+    " * Output the set $R$ with a label using `print`.\n",
     " * Generate relation diagram using `draw_relation(A,B,R)`.\n"
    ]
   },
@@ -381,7 +382,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+	   "cellView": "form",
+	    "label": "feedback"
+},
    "outputs": [],
    "source": [
     "#@markdown This a a short questionnaire for you to provide feedback on how you think the semester is progressing and in particular for __Discrete Mathematics__, how easy/difficult, interesting/boring, useful/confusing you find the material. By completing the following you will help us improve our delivery.<br />Please enter your feedback and click on arrow at top-left to save. \n",
